styles.css
/*Clearfix*/
.group:after {
  content: "";
  display: table;
  clear: both;
}

html, body {
  /*background: url("background2.png");*/
  padding: 0;
}

html {
  /*overflow-y: scroll;*/
  margin: 0;
  height: 100%;
  box-sizing: border-box;
  font-family: 'Montserrat', sans-serif;
  font-size: 13px;
}

*,
*:before,
*:after {
  box-sizing: inherit;
  margin: 0 auto;
}

body {
  position: relative;
  margin: auto;
  min-height: 100%;
  margin-top: 0;
  background-color: rgba(0,0,0,0.02);
  padding: 0;
}

header {
  margin: 0 auto;
  display: block;
  border-bottom: 2px solid #99baef;
  width: 100%;
  background-color: #ffffff;
  padding-top: 0;
}

/*  Footer */
footer {
  font-size: 15px;
  background-color: #eeeeee;
  position: absolute;
  right: 0;
  left: 0;
  bottom: 0;
  width: 100%;
}
div.footer-flex-container {
  padding: 0 3px 0 3px;
  width: 800px;
  display: flex;
  flex-wrap: nowrap;
}

footer p {
  width: 75%;
  padding: 10px 0 0 0;
  flex-shrink: 2;
  /*remember to change the height of the footer-parent to the height of the footer*/
}

footer a {
  flex-shrink: 1;
  padding: 10px 0;
}

footer div.spacer {
  margin: 0 3px 0 3px;
  padding: 10px 0;
}

.footer-parent {
  padding-top: 37px;
}
/* end Footer */

label {
  user-select: none;
}

.tagline {
  color: #4a5154;
  margin-bottom: 10px;
}

.introduction {
  margin-bottom: 20px;
}

.mainContent {
  margin: 15px auto;
  /*margin-top: 15px;*/
  display:block;
  background-color: #ffffff;
  width: 800px;
  /*padding: 20px;*/
  border: 1px solid rgba(0,0,0,0.08);
}

.mainHeaderText {
  color: #4a5154;
  padding-left: 20px;
  padding-top: 15px;
  padding-bottom: 15px;
  margin: 0 auto;
  text-align: left;
  width: 800px;
}

.hidden {
  display: none;
}

.inline {
  display: inline-block;
}

.introduction {
  margin: 20px 40px 20px 40px;
}

input[type=number] {
  border: 1px solid #b2b2b2;
}

.currency {
  padding-right: 2px;
}

/* Basic Inputs section*/

.inputs-section {
  margin: 0px 40px 0px 40px;
}

.basic-input {
  display: inline-block;
  width: 50%;
}

.basic-input:nth-of-type(2) {
  text-align: right;
}

div.basic-input > * {
  display: inline-block;
}

/* end Basic Inputs section*/


/* Advanced settings section */
.advanced-section {
  margin-top: 20px;
  width: 720px;
}

.advanced-header {
  width: 100%;
  padding: 10px;
  background-color: #eeeeee;
  border: 1px solid #b2b2b2;
  -ms-user-select: none;
  user-select: none;
}

.advanced-header:hover {
  background-color: #dedede;
}

.advanced-header::after {
  content: "\002B";
  font-size: 14px;
  float: right;
}

.advanced-header.active::after {
  content: "\2212";
}

.advanced-content {
  width: 100%;
  border: 1px solid #b2b2b2;
  border-top: none;
  display: none;
  padding: 10px 20px 0px 20px;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 10px;
}

.advanced-header.active + .advanced-content {
  display: grid;
}

.advanced-input {
  margin-bottom: 10px;
  margin-left: 0px;
  display: block;
}

div.advanced-input > * {
  display: inline-block;
}
/* end Advanced settings box */



/* Yearly/Monthly/Weekly output box */
label.radiobox-label {
  /* display: block; - leaves a small gap to the right - doesn't seem to like 33.33% width, but flex seems to handle it fine?*/
  display: flex;
  justify-content: center;
  height: 100%;
  font-weight: bold;
  background: white;
  float: left;
  width: 33.333333333333333%;
  /*padding: 6px 0 6px 0;*/
  padding: 10px 0 10px 0;
  -ms-user-select: none;
  user-select: none;
}

label.radiobox-label:nth-of-type(2) {
  border-left: 1px solid #b2b2b2; /* rbga(0,0,0,0.3), rgb(178,178,178) */
  border-right: 1px solid #b2b2b2;
}

:checked+label.radiobox-label {
  border-top: 3px solid #99baef;
  margin-top: -1px;
  /*padding-top: 4px;*/
  padding-top: 8px;
  /*padding-bottom: 7px;*/
  padding-bottom: 11px;
  border-bottom: none;
}

:not(:checked)+label.radiobox-label {
  background-color: #eeeeee;
  border-bottom: 1px solid #b2b2b2;
}

:not(:checked)+label.radiobox-label:hover {
  background-color: #dedede;
}

:checked+label.radiobox-label:hover {
  background-color: #f8f8f8;
}

.top-wrapper {
  box-shadow: 3px 3px 5px #cccccc; /* rbga(0,0,0,0.2), rgb(204,204,204) */
  border-top: 1px solid rgba(0,0,0,0.3);
  border-left: 1px solid rgba(0,0,0,0.3);
  border-right: 1px solid rgba(0,0,0,0.3);
  z-index: 2;
}

.bottom-wrapper {
  margin-top: -2px;
  padding-top: 74px;
  padding-bottom: 74px;
  height: 100%;
  text-align: center;
  background-color: #ffffff;
  box-shadow: 3px 3px 5px #cccccc;
  border: 1px solid rgba(0,0,0,0.3);
  z-index: 3;
}

.radiobox-content {
  font-size: 14px;
}

.radiobox {
  width: 281px;
  margin: 40px;
  margin-top: 30px;
  float: left;
}
/* end Yearly/Monthly/Weekly output box */

.afterword {
  margin: 20px 40px;
}

#pieChart {
  display: inline-block;
  margin: 0 auto;
  margin: 30px 0px;
  height: 200px;
  width: 400px;
  padding-left: 10px;
  border: 1px solid #b2b2b2;
}

@media screen and (max-width: 817px) {
  .mainContent {
    /*width: 100vw;*/
    width: 100%;
    margin: 0 auto;
  }
  .mainHeaderText {
    /*width: 100vw;*/
    width: 100%;
  }
  .introduction {
    width: 90vw;
    margin: 20px auto;
  }
  .advanced-section {
    width: 90vw;
  }
  .radiobox {
    margin: 0 auto;
    margin-top: 30px;
    float: none;
    min-width: 281px;
    width: 90vw;
  }
  .bottom-wrapper {
    padding: 30px 0;
  }
  .inputs-section {
    margin: 0 auto;
    width: 90vw;
  }
  .basic-input {
    display: inline-block;
    text-align: center;
    width: 40vw;
    }
  footer {
    width: 100%;
  }
  footer a {
    /*margin-left: 3px;*/
  }
  div.footer-flex-container {
    width: 100%;
  }
  #pieChart {
    width: 90vw;
    margin: 0 auto;
    margin-top: 30px;
    display: block;
  }
}

